// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PingListExpandedRow doesn't render list items if the body field is undefined 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={Array []}
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow doesn't render list items if the http field is undefined 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={Array []}
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow doesn't render list items if the response field is undefined 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={Array []}
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders error information when an error field is present 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiCallOut
      color="danger"
    >
      <EuiDescriptionList
        listItems={
          Array [
            Object {
              "description": <EuiText>
                Forbidden
              </EuiText>,
              "title": "Error",
            },
            Object {
              "description": <React.Fragment>
                <BodyDescription
                  body={
                    Object {
                      "bytes": 1200000,
                      "content": "<http><head><title>The Title</title></head><body></body></http>",
                      "hash": "testhash",
                    }
                  }
                />
                <EuiSpacer
                  size="s"
                />
                <BodyExcerpt
                  content="<http><head><title>The Title</title></head><body></body></http>"
                />
              </React.Fragment>,
              "title": "Response Body",
            },
          ]
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders expected elements for valid props 1`] = `
<EuiFlexGroup>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={
          Array [
            Object {
              "description": <React.Fragment>
                <BodyDescription
                  body={
                    Object {
                      "bytes": 1200000,
                      "content": "<http><head><title>The Title</title></head><body></body></http>",
                      "hash": "testhash",
                    }
                  }
                />
                <EuiSpacer
                  size="s"
                />
                <BodyExcerpt
                  content="<http><head><title>The Title</title></head><body></body></http>"
                />
              </React.Fragment>,
              "title": "Response Body",
            },
          ]
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;
